After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770655 - State transitions wrong
State transitions wrong
Status: RESOLVED FIXED
Product: gupnp-tools
Classification: Other
Component: General
unspecified
Other Windows
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-31 16:13 UTC by Jens Georg
Modified: 2019-02-22 05:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
av-cp: Pause not possible when stopped (902 bytes, patch)
2016-09-05 21:19 UTC, Jens Georg
committed Details | Review

Description Jens Georg 2016-08-31 16:13:00 UTC
When in stopped, it is possible to click "Pause" which causes and invalid transition
Comment 1 Jens Georg 2016-09-05 21:19:39 UTC
Created attachment 334856 [details] [review]
av-cp: Pause not possible when stopped

Signed-off-by: Jens Georg <mail@jensge.org>
Comment 2 Jens Georg 2016-09-06 20:03:10 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.